--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^8.0.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.2.3",
     "prettier": "3.0.1"
   }
