feat: add Storybook with knobs

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "src/**/*": [
@@ -32,6 +34,15 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.5",
+    "@storybook/addon-essentials": "7.1.0",
+    "@storybook/addon-interactions": "7.1.0",
+    "@storybook/addon-knobs": "^7.0.2",
+    "@storybook/addon-links": "7.1.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "7.1.0",
+    "@storybook/nextjs": "7.1.0",
+    "@storybook/react": "7.1.0",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
@@ -48,6 +59,7 @@
     "jest-environment-jsdom": "^29.6.2",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.2.3",
-    "prettier": "3.0.1"
+    "prettier": "3.0.1",
+    "storybook": "7.1.0"
   }
 }
