--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.7",
