--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "lint-staged": {
     "src/**/!(*.stories|global).{js,jsx,ts,tsx}": [
       "yarn lint --fix",
-      "yarn test --findRelatedTests --bail"
+      "yarn test --passWithNoTests --findRelatedTests --bail"
     ]
   },
   "dependencies": {
