--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "yarn test --watch",
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -56,6 +57,7 @@
     "jest-environment-jsdom": "^29.6.2",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.2.3",
+    "plop": "^3.1.2",
     "prettier": "3.0.1",
     "storybook": "7.1.0"
   }
